Added Spring Security credentials to properties file and commented out LoadDataBase.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+# Spring DATASOURCE:
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/wine_app
 spring.datasource.username=admin
 spring.datasource.password=admin
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+# Set SQL dialect to Postgres:
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+# Hibernate ddl auto setting (create, create-drop, validate, update):
 spring.jpa.hibernate.ddl-auto=update
+
+# Spring Security credentials:
+spring.security.user.name = user
+spring.security.user.password = pass
