Added 404 exceptions for wines and reviews.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Base path for api endpoints:
+server.servlet.context-path=/api
+
 # Spring DATASOURCE:
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/wine_app
