--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
 # Base path for api endpoints:
-server.servlet.context-path=/api
+server.servlet.context-path = /api
 
 # Spring DATASOURCE:
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/wine_app
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.platform = postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
+spring.datasource.username = admin
+spring.datasource.password = admin
 
 # Set SQL dialect to Postgres:
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto setting (create, create-drop, validate, update):
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = update
 
 # Spring Security credentials:
 spring.security.user.name = user
 spring.security.user.password = pass
+
+# Frontend URL:
+frontend.url = http://localhost:8081
