--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,18 @@
 		<url>http://github.com/mika-alaoutinen/WineApp</url>
 		<developerConnection>scm:git:https://github.com/mika-alaoutinen/WineApp.git</developerConnection>
 	  <tag>HEAD</tag>
-  </scm>
+  	</scm>
+
+	<!-- Distribution management for storing release packages. -->
+	<distributionManagement>
+		<repository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>Koodiartesaani</id>
+			<name>Local PC</name>
+			<url>file:///home/mikaa/dev/repository</url>
+			<layout>default</layout>
+		</repository>
+	</distributionManagement>
 
 	<properties>
 		<java.version>13</java.version>
