--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
 		<developerConnection>scm:git:https://github.com/mika-alaoutinen/WineApp.git</developerConnection>
 	</scm>
 
+	<distributionManagement>
+		<repository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>Local</id>
+			<name>Local PC</name>
+			<url>file:///home/mikaa/dev/repository</url>
+			<layout>default</layout>
+		</repository>
+	</distributionManagement>
+
 	<properties>
 		<java.version>13</java.version>
 	</properties>
