--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 # Base path for api endpoints:
 server.servlet.context-path = /api
 
-# Spring DATASOURCE:
-spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
-spring.datasource.username = admin
-spring.datasource.password = admin
+# Spring DATASOURCE for Heroku:
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 
 # Set SQL dialect to Postgres:
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -17,4 +20,19 @@ spring.security.user.name = user
 spring.security.user.password = pass
 
 # Frontend URL:
-frontend.url = http://localhost:8081
+frontend.url = https://maistissa.herokuapp.com/
+
+
+# -----------------------------------------------------------------------------------
+
+# Local development settings:
+
+# Spring DATASOURCE for local development:
+# Note that Heroku automatically generates url, username and password and they
+# must not be included application.properties when the app is deployed!
+
+#spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
+#spring.datasource.username = admin
+#spring.datasource.password = admin
+
+#frontend.url = http://localhost:8081
