--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>com.mika</groupId>
 	<artifactId>WineApp</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>WineApp</name>
 	<description>REST back end for a wine tasting diary app</description>
 
@@ -21,7 +21,7 @@
 		<connection>scm:git:https://github.com/mika-alaoutinen/WineApp.git</connection>
 		<url>http://github.com/mika-alaoutinen/WineApp</url>
 		<developerConnection>scm:git:https://github.com/mika-alaoutinen/WineApp.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>1.0.1</tag>
   </scm>
 
 	<distributionManagement>
