Provide allowed frontend URLs as a list in application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
+# Frontend URLs that CORS allows:
+frontend.urls = https://maistissa.herokuapp.com/,http://localhost:8081
+
 # Base path for api endpoints:
 server.servlet.context-path = /api
+
+# Spring Security credentials:
+spring.security.user.name = user
+spring.security.user.password = pass
+
+# Set SQL dialect to Postgres:
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto setting (create, create-drop, validate, update):
+spring.jpa.hibernate.ddl-auto = update
 
 # Spring DATASOURCE for Heroku:
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -9,30 +22,13 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
-# Set SQL dialect to Postgres:
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-# Hibernate ddl auto setting (create, create-drop, validate, update):
-spring.jpa.hibernate.ddl-auto = update
-
-# Spring Security credentials:
-spring.security.user.name = user
-spring.security.user.password = pass
-
-# Frontend URL:
-frontend.url = https://maistissa.herokuapp.com/
-
 
 # -----------------------------------------------------------------------------------
 
 # Local development settings:
 
-# Spring DATASOURCE for local development:
-# Note that Heroku automatically generates url, username and password and they
-# must not be included application.properties when the app is deployed!
-
-#spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
-#spring.datasource.username = admin
-#spring.datasource.password = admin
-
-#frontend.url = http://localhost:8081
+# Note that Heroku automatically generates datasource url, username and password
+# and they must not be included application.properties when the app is deployed!
+spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
+spring.datasource.username = admin
+spring.datasource.password = admin
