Added Swagger UI dependency.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
+# URL for OpenAPI documentation:
+springdoc.swagger-ui.path=/swagger
+
 
 # -----------------------------------------------------------------------------------
 
