--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Open API documentation -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.2.26</version>
+		</dependency>
 	</dependencies>
 
 	<build>
