--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,6 @@ springdoc.swagger-ui.path=/swagger
 
 # Note that Heroku automatically generates datasource url, username and password
 # and they must not be included application.properties when the app is deployed!
-spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
-spring.datasource.username = admin
-spring.datasource.password = admin
+#spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
+#spring.datasource.username = admin
+#spring.datasource.password = admin
