Removed forward slash from herokuapp url to fix CORS error.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Frontend URLs that CORS allows:
-frontend.urls = https://maistissa.herokuapp.com/,http://localhost:8081
+frontend.urls = https://maistissa.herokuapp.com,http://localhost:8081
 
 # Base path for api endpoints:
 server.servlet.context-path = /api
