--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/wine_app
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: admin     
       SPRINGDOC_SWAGGER_UI_PATH: /swagger
