--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: '3'
 
 services:
+  # Database
+  postgres:
+    container_name: postgres
+    environment:
+      POSTGRES_DATABASE: wine_app
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    expose:
+      - 5432
+    image: postgres:11.6
+    ports:
+      - 5432:5432
+    restart: unless-stopped
+    volumes:
+      - pg_data:/var/lib/postgres
+
   # Backend API
   wineapp:
     container_name: wineapp
@@ -13,38 +29,10 @@ services:
       SPRINGDOC_SWAGGER_UI_PATH: /swagger
     expose:
       - 8080
-    image: mikaalaoutinen/wineapp:1.0
-    networks:
-      - backend
-      - frontend
+    image: mikaalaoutinen/wineapp
     ports:
       - 8080:8080
     restart: unless-stopped
-  
-  # Database
-  postgres:
-    container_name: postgres
-    environment:
-      # POSTGRES_DATABASE: ${POSTGRES_DATABASE}
-      # MYSQL_USER: ${POSTGRES_USER}
-      # MYSQL_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DATABASE: wine_app
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-    expose:
-      - 5432
-    image: postgres:11.6
-    networks:
-      - backend
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
-    volumes:
-      - pg_data:/var/lib/postgres
-
-networks:
-  backend:
-  frontend:
     
 volumes:
   pg_data:
