--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,11 @@ spring.datasource.removeAbandoned = true
 
 # URL for OpenAPI documentation:
 springdoc.swagger-ui.path = /swagger
+
+
+# -----------------------------------------------------------------------------------
+
+# Local development settings:
+spring.datasource.url = jdbc:postgresql://localhost:5432/
+spring.datasource.username = admin
+spring.datasource.password = admin
