--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,23 +15,20 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = update
 
 # Spring DATASOURCE for Heroku:
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.maxActive = 10
+spring.datasource.maxIdle = 5
+spring.datasource.minIdle = 2
+spring.datasource.initialSize = 5
+spring.datasource.removeAbandoned = true
 
 # URL for OpenAPI documentation:
-springdoc.swagger-ui.path=/swagger
+springdoc.swagger-ui.path = /swagger
 
 
 # -----------------------------------------------------------------------------------
 
 # Local development settings:
-
-# Note that Heroku automatically generates datasource url, username and password
-# and they must not be included application.properties when the app is deployed!
-#spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
+#spring.datasource.url = jdbc:postgresql://localhost:5432/
 #spring.datasource.username = admin
 #spring.datasource.password = admin
