--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,6 @@ springdoc.swagger-ui.path = /swagger
 # -----------------------------------------------------------------------------------
 
 # Local development settings:
-#spring.datasource.url = jdbc:postgresql://localhost:5432/
+#spring.datasource.url = jdbc:postgresql://localhost:5432/wine_app
 #spring.datasource.username = admin
 #spring.datasource.password = admin
