WIP JWT token features.

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- JWT for authentication -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.security</groupId>
