--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
 
     <properties>
         <java.version>13</java.version>
+        <jjwt.version>0.9.1</jjwt.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <springdoc-openapi-ui.version>1.3.4</springdoc-openapi-ui.version>
     </properties>
 
     <dependencies>
@@ -84,7 +87,7 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <version>${jjwt.version}</version>
         </dependency>
         <!-- Testing -->
         <dependency>
@@ -96,7 +99,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.3.4</version>
+            <version>${springdoc-openapi-ui.version}</version>
         </dependency>
     </dependencies>
 
@@ -104,7 +107,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
+                <version>${maven-release-plugin.version}</version>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <tagNameFormat>@{project.version}</tagNameFormat>
