--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,5 +36,9 @@ frontend:
   urls: https://maistissa.herokuapp.com,http://localhost:8081
 
 jwt:
-  expiration: 86400
+  expiration: 900000 # Expiration time is 15 min
   secret: ${JWT_SECRET}
+
+admin:
+  username: ${ADMIN_USERNAME}
+  password: ${ADMIN_PASSWORD}
