--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -19,3 +19,7 @@ admin:
 # Allow connections from this URL:
 frontend:
   url: https://maistissa.herokuapp.com
+
+jwt:
+  expiration: 900000 # Expiration time is 15 min
+  secret: ${JWT_SECRET}
