--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring:
 springdoc:
   swagger-ui:
     path: /swagger
+
+jwt:
+  expiration: 900000 # Expiration time is 15 min
+  secret: jwt_secret
