--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
     context-path: /api
 
 spring:
+  datasource:
+    driverClassName: org.postgresql.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
