--- a/.github/workflows/development_branch.yml
+++ b/.github/workflows/development_branch.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         java-version: 1.13
     - name: Build and test with Maven
-      run: mvn -B clean package -Ptest --file pom.xml
+      run: mvn -B clean package --file pom.xml
