--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   build:
+    name: Build and run tests
     runs-on: ubuntu-latest
 
     steps:
@@ -26,7 +27,10 @@ jobs:
         run: mvn -B clean package --file pom.xml
 
   release:
+    name: Creates new Maven release
     runs-on: ubuntu-latest
+    needs:
+      - build
 
     steps:
     - name: Maven release
