--- a/pom.xml
+++ b/pom.xml
@@ -24,15 +24,15 @@
         <tag>HEAD</tag>
     </scm>
 
-    <distributionManagement>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>Local</id>
-            <name>Local PC</name>
-            <url>file:///C:\Users\mikaa\dev\repository</url>
-            <layout>default</layout>
-        </repository>
-    </distributionManagement>
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <uniqueVersion>false</uniqueVersion>-->
+<!--            <id>Local</id>-->
+<!--            <name>Local PC</name>-->
+<!--            <url>file:///C:\Users\mikaa\dev\repository</url>-->
+<!--            <layout>default</layout>-->
+<!--        </repository>-->
+<!--    </distributionManagement>-->
 
     <properties>
         <java.version>13</java.version>
