--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 
     <properties>
         <java.version>13</java.version>
+        <h2database.version>1.4.200</h2database.version>
         <jjwt.version>0.9.1</jjwt.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <springdoc-openapi-ui.version>1.3.4</springdoc-openapi-ui.version>
@@ -64,7 +65,7 @@
             <!-- In-memory DB for running tests -->
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.200</version>
+            <version>${h2database.version}</version>
         </dependency>
         <!-- Development utilities -->
         <dependency>
