--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,9 @@
         <tag>HEAD</tag>
     </scm>
 
-    <distributionManagement>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>Local</id>
-            <name>Local PC</name>
-            <url>file:///C:\Users\mikaa\dev\repository</url>
-            <layout>default</layout>
-        </repository>
-    </distributionManagement>
-
     <properties>
         <java.version>13</java.version>
+        <h2database.version>1.4.200</h2database.version>
         <jjwt.version>0.9.1</jjwt.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <springdoc-openapi-ui.version>1.3.4</springdoc-openapi-ui.version>
@@ -69,6 +60,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <!-- In-memory DB for running tests -->
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2database.version}</version>
         </dependency>
         <!-- Development utilities -->
         <dependency>
