--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -1,5 +1,5 @@
 # Workflow for master branch.
-# Compiles the code, runs tests and creates a new Maven release on push.
+# Compiles the code, runs tests, bumps up version and adds new tag.
 
 name: Master branch
 
@@ -7,33 +7,32 @@ on:
   push:
     branches:
       - master
+      - actions
 
 jobs:
-  build:
-    name: Build and run tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 13
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.13
-      - name: Build and test with Maven
-        run: mvn -B clean package --file pom.xml
+#  build:
+#    name: Build and run tests
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up JDK 13
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.13
+#      - name: Build and test with Maven
+#        run: mvn -B clean package --file pom.xml
 
   release:
-    name: Creates new Maven release
+    name: Bump version and add tag
     runs-on: ubuntu-latest
     needs:
       - build
 
     steps:
-    - name: Maven release
-      uses: qcastel/github-actions-maven-release@v1.0.3
-      with:
-        release-branch-name: master
-        git-release-bot-name: release-bot
-        git-release-bot-email: release-bot@example.com
-        access-token: ${{ secrets.GITHUB_ACCESS_TOKEN }}
-        maven-args: -Dmaven.javadoc.skip=true -DskipTests -DskipITs -Ddockerfile.skip -DdockerCompose.skip
+      - uses: actions/checkout@master
+      - name: Bump version and push tag
+        uses: mathieudutour/github-tag-action@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          dry_run: true
