--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -10,18 +10,18 @@ on:
       - actions
 
 jobs:
-#  build:
-#    name: Build and run tests
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 13
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.13
-#      - name: Build and test with Maven
-#        run: mvn -B clean package --file pom.xml
+  build:
+    name: Build and run tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 13
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.13
+      - name: Build and test with Maven
+        run: mvn -B clean package --file pom.xml
 
   release:
     name: Bump version and add tag
