Change db admin default credentials

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ jwt:
 
 # Used in LoadDatabase to create an initial admin user
 admin:
-  username: admin
-  password: admin
+  username: dbadmin
+  password: dbadmin
 
 # Allow connections from this URL:
 frontend:
