--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -7,12 +7,12 @@ on:
   push:
     branches:
       - master
+      - docker # todo
 
 jobs:
   build:
     name: Build and run tests
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 13
@@ -27,10 +27,26 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
-
     steps:
       - uses: actions/checkout@master
       - name: Bump version and push tag
         uses: mathieudutour/github-tag-action@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+  
+  docker:
+    name: Creates Docker image and pushes it to Docker Hub
+    runs-on: ubuntu-latest
+    needs:
+      - tag
+    steps:
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v1.1.0
+        with:
+          dockerfile: ../../Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: mikaalaoutinen/wineapp
+          tag_with_ref: true
+          push: ${{ startsWith(github.ref, 'refs/tags/') }}
+          push: false # todo
