--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -49,5 +49,5 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: mikaalaoutinen/wineapp
           tag_with_ref: true
-          push: ${{ startsWith(github.ref, 'refs/tags/') }}
+          # push: ${{ startsWith(github.ref, 'refs/tags/') }}
           push: false # todo
