--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v1.1.0
         with:
-          dockerfile: ../../Dockerfile
+          # dockerfile: ../../Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: mikaalaoutinen/wineapp
