--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -37,7 +37,6 @@ jobs:
   #       uses: mathieudutour/github-tag-action@v4
   #       with:
   #         github_token: ${{ secrets.GITHUB_TOKEN }}
-  #         dry_run: true # todo
   
   docker:
     name: Creates Docker image and pushes it to Docker Hub
@@ -45,10 +44,11 @@ jobs:
     # needs:
     #   - tag
     steps:
+      - uses: actions/checkout@v2
       - name: Build and push Docker images
         uses: docker/build-push-action@v1.1.0
         with:
-          dockerfile: ./Dockerfile
+          # dockerfile: ./Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: mikaalaoutinen/wineapp
