--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -1,5 +1,9 @@
 # Workflow for master branch.
-# Compiles the code, runs tests, bumps up version and adds new tag.
+#
+# Executes the following jobs:
+#   1) Compile and test the code.
+#   2) Add a new Git tag.
+#   3) Builds and publishes a Docker image of the new version.
 
 name: Master branch
 
@@ -12,7 +16,6 @@ jobs:
   build:
     name: Build and run tests
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 13
@@ -27,10 +30,24 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
-
     steps:
       - uses: actions/checkout@master
       - name: Bump version and push tag
         uses: mathieudutour/github-tag-action@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+  
+  docker:
+    name: Creates Docker image and pushes it to Docker Hub
+    runs-on: ubuntu-latest
+    needs:
+      - tag
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v1.1.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: mikaalaoutinen/wineapp
+          tags: latest
