Change settings in pom and application.yml

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${h2database.version}</version>
+            <scope>test</scope>
         </dependency>
         <!-- Development utilities -->
         <dependency>
