--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ jwt:
 # Used in LoadDatabase to create an initial admin user
 admin:
   username: admin
-  password: password
+  password: admin
 
 # Allow connections from these URLs:
 frontend:
