Still not working

--- a/src/main/resources/generatorConfig.yaml
+++ b/src/main/resources/generatorConfig.yaml
@@ -18,3 +18,5 @@ modelNameSuffix: DTO
 openApiNullable: false
 skipDefaultInterface: true
 useTags: true
+
+additionalModelTypeAnnotations: "@lombok.NoArgsConstructor @lombok.AllArgsConstructor"
