--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>${springdoc-openapi-ui.version}</version>
     </dependency>
-    <!-- These are needed because OpenAPI generator's Spring profile has them as dependenies -->
+    <!-- These are needed because OpenAPI generator's Spring profile has them as dependencies -->
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-annotations</artifactId>
@@ -128,6 +128,11 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
         <!-- Maven releases -->
         <artifactId>maven-release-plugin</artifactId>
         <version>${maven-release-plugin.version}</version>
@@ -149,15 +154,6 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <!--
-              At least some of these are needed to get MapStruct working with the OpenAPI generated classes.
-              Without these, the Entity -> DTO mapping fails because the DTO classes do not have normal setters.
-              -->
-              <configOptions>
-                <additionalModelTypeAnnotations>
-                  @lombok.Builder @lombok.NoArgsConstructor @lombok.AllArgsConstructor
-                </additionalModelTypeAnnotations>
-              </configOptions>
               <configurationFile>${project.basedir}/src/main/resources/generatorConfig.yaml</configurationFile>
               <inputSpec>
                 https://raw.githubusercontent.com/mika-alaoutinen/maistissa-openapi/master/openapi.json
@@ -169,11 +165,7 @@
         </executions>
       </plugin>
 
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-
+      <!-- Setup MapStruct and Lombok -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -181,7 +173,6 @@
           <source>16</source>
           <target>16</target>
           <annotationProcessorPaths>
-            <!-- Setup MapStruct -->
             <path>
               <groupId>org.mapstruct</groupId>
               <artifactId>mapstruct-processor</artifactId>
