--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.0</version>
+    <version>2.5.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -28,7 +28,10 @@
   <properties>
     <java.version>16</java.version>
     <jjwt.version>0.9.1</jjwt.version>
+    <mapstruct.version>1.4.2.Final</mapstruct.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+    <openapi-generator-version>5.2.1</openapi-generator-version>
+    <!-- delete this -->
     <springdoc-openapi-ui.version>1.4.3</springdoc-openapi-ui.version>
   </properties>
 
@@ -55,6 +58,7 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
     <!-- Database dependencies -->
     <dependency>
       <groupId>org.postgresql</groupId>
@@ -66,6 +70,7 @@
       <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
+
     <!-- Development utilities -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -77,30 +82,58 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
+
     <!-- JWT for authentication -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
       <version>${jjwt.version}</version>
     </dependency>
+
     <!-- Testing -->
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- OpenAPI documentation -->
+
+    <!-- OpenAPI -->
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>${springdoc-openapi-ui.version}</version>
+    </dependency>
+    <!-- These are needed because OpenAPI generator's Spring profile has them as dependencies -->
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.6.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+    <!-- DTO mapping -->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${mapstruct.version}</version>
     </dependency>
   </dependencies>
 
   <build>
     <plugins>
       <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <!-- Maven releases -->
         <artifactId>maven-release-plugin</artifactId>
         <version>${maven-release-plugin.version}</version>
         <configuration>
@@ -109,20 +142,54 @@
           <releaseProfiles>release</releaseProfiles>
         </configuration>
       </plugin>
+
+      <!-- OpenAPI code generation -->
       <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>${openapi-generator-version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <configurationFile>${project.basedir}/src/main/resources/generatorConfig.yaml</configurationFile>
+              <inputSpec>
+                https://raw.githubusercontent.com/mika-alaoutinen/maistissa-openapi/master/openapi.json
+              </inputSpec>
+              <generatorName>spring</generatorName>
+              <library>spring-boot</library>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M3</version>
-      </plugin>
+
+      <!-- Setup MapStruct and Lombok -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <source>16</source>
           <target>16</target>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>1.18.20</version>
+            </path>
+            <!-- Needed with Lombok 1.18.16 or newer. See https://mapstruct.org/faq/ -->
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok-mapstruct-binding</artifactId>
+              <version>0.2.0</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
     </plugins>
