Update CI actions to run maven verify and install

--- a/.github/workflows/development_branch.yml
+++ b/.github/workflows/development_branch.yml
@@ -20,4 +20,4 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
       - name: Build and test with Maven
-        run: mvn -B clean package --file pom.xml
+        run: mvn -B clean verify --file pom.xml
