--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
       - name: Build and test with Maven
-        run: mvn -B clean package --file pom.xml
+        run: mvn -B clean install --file pom.xml
 
   tag:
     name: Bump version and add tag
